--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,8 @@ target 'UploadingImage' do
     :hermes_enabled => false
   )
 
+  pod 'react-native-image-base64', :path => '../node_modules/react-native-image-base64'
+
   target 'UploadingImageTests' do
     inherit! :complete
     # Pods for testing
