--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.64.1",
     "react-native-document-picker": "^5.0.3",
     "react-native-flatlist-picker": "^1.0.1",
+    "react-native-image-base64": "^0.1.4",
     "react-native-image-picker": "^3.6.0",
     "react-native-searchable-dropdown": "^1.1.3",
     "react-native-vector-icons": "^8.1.0"
